--- a/config/LocalElement.ini
+++ b/config/LocalElement.ini
@@ -1,5 +1,6 @@
-[element]
+[login_element]
 username = email
 password = pass
 login_button = login_button
-login_element = pa
+[course_element]
+course = price
